--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -45,10 +45,14 @@
     <color name="taskitem_status_working">#5cb85c</color>
     <color name="taskitem_status_finish">#9b9b9b</color>
     <color name="taskitem_status_others">#303030</color>
-    <color name="case_overview_statistics_bar_color">#428bca</color>
     <color name="case_overview_statistics_grid_color">#e1e1e1</color>
     <color name="case_overview_statistics_axis_color">#9b9b9b</color>
     <color name="overview_listview_first_item_textcolor">#4a4a4a</color>
     <color name="overview_listview_second_item_textcolor">#9b9b9b</color>
+    <color name="tab_unselected">#9b9b9b</color>
+    <color name="tab_selected">#428bca</color>
+    <color name="statistics_bar_color1">#428bca</color>
+    <color name="statistics_bar_color2">#f0ad4e</color>
+    <color name="statistics_bar_color3">#d9534f</color>
 
 </resources>
