--- a/app/src/main/res/layout/drawer_item_normal.xml
+++ b/app/src/main/res/layout/drawer_item_normal.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/DrawerItemStyle"
-    android:background="?android:selectableItemBackground">
+    android:background="?selectableItemBackground">
 
     <ImageView
         android:id="@+id/left_icon"
@@ -12,14 +12,7 @@
 
     <TextView
         android:id="@+id/drawer_item_text"
-        style="@style/DrawerItemNormalTextStyle"
+        style="@style/DrawerItemTextStyle"
         android:layout_toRightOf="@+id/left_icon"/>
-
-    <ImageView
-        android:id="@+id/right_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"/>
 
 </RelativeLayout>
