--- a/app/src/main/res/layout/drawer_subitem.xml
+++ b/app/src/main/res/layout/drawer_subitem.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/drawer_subitem_height"
     android:gravity="center_vertical"
-    android:background="?android:selectableItemBackground">
+    android:background="@drawable/drawer_subitem_background">
 
     <TextView
         android:id="@+id/drawer_subitem"
