--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,7 +15,8 @@
     <color name="gray6">#d8d8d8</color>
     <color name="black1">#4a4a4a</color>
     <color name="black2">#303030</color>
-    <color name="blue">#428bca</color>
+    <color name="blue1">#428bca</color>
+    <color name="blue2">#4a90e2</color>
     <color name="orange">#f0ad4e</color>
     <color name="green">#5cb85c</color>
 
