--- a/app/src/main/res/drawable/case_progress_drawable.xml
+++ b/app/src/main/res/drawable/case_progress_drawable.xml
@@ -11,7 +11,7 @@
         <clip>
             <shape>
                 <corners android:radius="8dp"/>
-                <solid android:color="@color/blue"/>
+                <solid android:color="@color/blue1"/>
             </shape>
         </clip>
     </item>
