--- a/app/src/main/res/drawable/tab_bg_selected.xml
+++ b/app/src/main/res/drawable/tab_bg_selected.xml
@@ -4,7 +4,7 @@
         <shape>
             <stroke
                 android:width="3dp"
-                android:color="@color/blue" />
+                android:color="@color/blue1" />
         </shape>
     </item>
 </layer-list>
