--- a/app/src/main/res/drawable/tab_text_bg_selector.xml
+++ b/app/src/main/res/drawable/tab_text_bg_selector.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:state_selected="true"
-        android:color="@color/blue"/>
+        android:color="@color/blue1"/>
     <item
         android:state_selected="false"
         android:color="@color/gray1"/>
