--- a/app/src/main/res/drawable/worker_status_tab_vg_selector.xml
+++ b/app/src/main/res/drawable/worker_status_tab_vg_selector.xml
@@ -4,7 +4,7 @@
         android:state_selected="true">
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
             <stroke android:width="1dp" android:color="@color/gray3"/>
-            <solid android:color="@color/blue"/>
+            <solid android:color="@color/blue1"/>
         </shape>
     </item>
     <item>
