--- a/app/src/main/res/layout/ov_statisticts.xml
+++ b/app/src/main/res/layout/ov_statisticts.xml
@@ -28,7 +28,6 @@
             android:text="5/14 - 5/20"
             android:textSize="16sp"
             android:textColor="@color/black1"/>
-
     </LinearLayout>
 
     <LinearLayout
@@ -36,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="236dp"
         android:orientation="vertical"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="@dimen/case_ov_statistics_margin_top"
         android:layout_marginBottom="20dp"/>
 
     <LinearLayout
