--- a/app/src/main/res/layout/worker_taskitem_listview_view.xml
+++ b/app/src/main/res/layout/worker_taskitem_listview_view.xml
@@ -46,6 +46,7 @@
                 android:id="@+id/worker_taskitem_listview_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:padding="8dp"
                 android:text="@string/worker_ov_taskitem_listview_status"
                 android:textSize="14dp" />
         </LinearLayout>
