--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -70,6 +70,14 @@
     <dimen name="case_overview_statistics_x_axis_padding">8dp</dimen>
     <dimen name="overview_listview_item_height">56dp</dimen>
     <dimen name="ov_taskitem_listview_item_height">50dp</dimen>
+    <dimen name="ov_warning_margin_horizontal">8dp</dimen>
+    <dimen name="ov_warning_popup_horizontal_offset">50dp</dimen>
+    <dimen name="ov_warning_popup_vertical_offset">110dp</dimen>
+    <dimen name="ov_statistics_popup_margin_top">6dp</dimen>
+    <dimen name="ov_statistics_axis_text_size">16dp</dimen>
+    <dimen name="case_ov_statistics_margin_top">80dp</dimen>
+    <dimen name="worker_ov_statistics_margin_top">112dp</dimen>
+    <dimen name="ov_statistics_highlight_stroke_width">3dp</dimen>
 
     <!-- DrawerMenu fragment -->
     <dimen name="drawer_width">300dp</dimen>
