--- a/app/src/main/res/layout/fragment_worker_ov_status.xml
+++ b/app/src/main/res/layout/fragment_worker_ov_status.xml
@@ -35,13 +35,13 @@
             android:background="@drawable/border_textview_bg_gray"/>
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="32dp"
             android:layout_marginTop="18dp"
             android:gravity="right">
             <LinearLayout
                 android:id="@+id/record"
                 android:layout_width="96dp"
-                android:layout_height="32dp"
+                android:layout_height="match_parent"
                 android:background="@drawable/bg_solid_btn_bg_blue"
                 android:gravity="center"
                 android:layout_alignParentRight="true">
@@ -55,7 +55,7 @@
             <LinearLayout
                 android:id="@+id/capture"
                 android:layout_width="96dp"
-                android:layout_height="32dp"
+                android:layout_height="match_parent"
                 android:background="@drawable/bg_solid_btn_bg_gray"
                 android:gravity="center"
                 android:layout_toLeftOf="@id/record"
@@ -75,7 +75,7 @@
             <LinearLayout
                 android:id="@+id/upload"
                 android:layout_width="96dp"
-                android:layout_height="32dp"
+                android:layout_height="match_parent"
                 android:background="@drawable/bg_solid_btn_bg_gray"
                 android:gravity="center"
                 android:layout_toLeftOf="@id/capture"
@@ -91,6 +91,40 @@
                     android:textSize="16dp"
                     android:textColor="@color/black1"
                     android:text="@string/worker_ov_btn_upload"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_toLeftOf="@id/upload"
+                android:layout_marginRight="17dp"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/score_minus"
+                    android:layout_width="32dp"
+                    android:layout_height="match_parent"
+                    android:textSize="18dp"
+                    android:textColor="@color/black1"
+                    android:background="@drawable/bg_solid_btn_bg_gray"
+                    android:text="-"
+                    android:gravity="center"/>
+                <TextView
+                    android:id="@+id/score"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18dp"
+                    android:textColor="@color/black1"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"/>
+                <TextView
+                    android:id="@+id/score_plus"
+                    android:layout_width="32dp"
+                    android:layout_height="match_parent"
+                    android:textSize="18dp"
+                    android:textColor="@color/black1"
+                    android:background="@drawable/bg_solid_btn_bg_gray"
+                    android:text="+"
+                    android:gravity="center"/>
             </LinearLayout>
         </RelativeLayout>
     </LinearLayout>
